@@ -1,5 +1,7 @@
 [B]2.2.5[/B]
 • Fix personalized widget 5
+• Fix plots and thumbs on info dialog to avoid spoilers
+• Fix widgets property
 
 [B]2.2.4[/B]
 • Add possibility to show CDArt on widgets and on library
